--- a/css/style-1.0.1.css
+++ b/css/style-1.0.1.css
@@ -24,7 +24,13 @@ html {
   width: 100%;
   max-width: 1440px;
   margin: 0 auto;
-  padding: 60px 80px;
+  padding: 60px 40px;
+}
+
+main {
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 /* 3 - Components */
@@ -398,6 +404,7 @@ html {
   max-width: 1000px;
   margin: 0 auto;
   padding: 100px 0;
+  text-align: center;
 }
 
 @media only screen and (max-width: 768px) {
