--- a/css/style-1.0.1.css
+++ b/css/style-1.0.1.css
@@ -471,6 +471,9 @@ main {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 @media only screen and (max-width: 768px) {
