--- a/css/style-1.0.1.css
+++ b/css/style-1.0.1.css
@@ -293,7 +293,7 @@ main {
 }
 
 #moduleBanner.obrigado .container {
-  padding: 40px;
+  padding: 40px 80px;
   position: relative;
   min-height: 60vh;
 }
